<resources>
    <string name="app_name">AndroidStandard</string>

    <string name="content_desc">image</string>

    <string name="no_internet_connection_error_message">Не удалось загрузить данные. Проверьте соединение с интернетом и попробуйте еще раз</string>
    <string name="no_content_error_message">Нет данных для отображения</string>
    <string name="bad_response_error_message">Произошла ошибка загрузки данных на экране. Попробуйте позже еще раз</string>
    <string name="unexpected_error_error_message">@string/default_http_error_message</string>
    <string name="forbidden_error_error_message">Доступ запрещен</string>
    <string name="server_error_message">Произошла ошибка сервера. Попробуйте позже еще раз</string>
    <string name="server_error_not_found">Произошла ошибка, данные не найдены. Попробуйте позже еще раз</string>
    <string name="default_http_error_message">Произошла ошибка загрузки данных, возможно, не вся информация на экране актуальна</string>

    <string name="load_more_text">Показать еще</string>

    <!-- placeholder -->
    <string name="placeholder_default_subtitle">Нет подключения к интернету.\nПроверьте соединение и обновите экран.</string>
    <string name="placeholder_default_btn">Обновить</string>

    <!--Авторизация-->
    <string name="invalid_phone_number">Невалидный номер</string>

    <string name="fragment_auth_phone_continue_btn">Продолжить</string>
    <string name="fragment_auth_login_title">Вход</string>
    <string name="fragment_auth_phone_title">Ваш телефон</string>
    <string name="fragment_auth_sms_title">Код из СМС</string>
    <string name="fragment_auth_sms_input_hint">****</string>
    <string name="fragment_auth_phone_sms_message">Код отправлен на номер\n%s</string>
    <string name="fragment_auth_sms_resend_btn">Выслать код еще раз</string>
    <string name="fragment_auth_sms_code_chronometer_fmt" formatted="false">Выслать еще раз через %d с</string>
    <string name="fragment_auth_sms_code_error_code_message">Код из СМС не подходит. Попробуйте еще раз.</string>
    <string name="fragment_auth_agreement_auth_text">Я принимаю оферту и даю согласие на обработку своих персональных данных</string>
    <string name="fragment_auth_start_span_word">оферту</string>
    <string name="fragment_auth_sms_code_error_only_invited">Сейчас мы работаем в режиме закрытого клуба. Мы обязательно пришлем Вам приглашение, когда в нашем клубе появятся новые места!</string>

    <string name="sms_allow_chars">0123456789</string>

</resources>
