<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/root_container"
        android:layout_width="240dp"
        android:layout_height="264dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:focusable="true"
            android:padding="4dp" />

        <TextView
            android:id="@+id/login_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/fragment_auth_login_title" />

        <TextView
            android:id="@+id/login_sms_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="38dp"
            android:text="@string/fragment_auth_sms_title" />

        <EditText
            android:id="@+id/login_sms_number_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_sms_title_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:digits="@string/sms_allow_chars"
            android:hint="@string/fragment_auth_sms_input_hint"
            android:inputType="number"
            android:letterSpacing=".45"
            android:maxLength="4"
            android:textColor="@color/colorAccent"
            android:textColorHint="?android:attr/textColorSecondary"
            tools:ignore="UnusedAttribute">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/sms_from_phone_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_sms_number_et"
            android:layout_marginTop="25dp"
            android:gravity="center"
            tools:text="@string/fragment_auth_phone_sms_message" />

        <Chronometer
            android:id="@+id/resend_sms_chronometer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/sms_from_phone_tv"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/resend_sms_btn"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:text="@string/fragment_auth_sms_resend_btn"
            tools:visibility="invisible" />

        <FrameLayout
            android:id="@+id/lama_loader_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="13dp">

            <ru.golamago.android.ui.views.LamaLoader
                android:id="@+id/lama_loader_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>